--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -50,5 +50,8 @@
     </div>
 
     <script src="assets/js/contact.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.2/firebase-firestore.js"></script>
+
 </body>
 </html>
